# tigris

./: LICENSE  flake.nix  hie.yaml  tigris.cabal
app/: Entities.hs  Main.hs
data/: sheet-1.db
db/: Main.hs
shaders/: default.frag  default.vert  tree.frag  tree.vert  voxel.frag  voxel.gs  voxel.vert
sprites/: Sheet-1.aseprite
src/: Tigris.hs
src/Tigris/: Collision.hs  ECS.hs  FRP.hs  Graphics.hs  Init.hs  Inventory.hs  Load.hs  OpenGL.hs  SDL.hs  WFC.hs
src/Tigris/Collision/: AABB.hs  DynamicAABBTree.hs  DynamicAABBTreeFixed.hs  DynamicAABBTreePure.hs  KDTreeMap.hs
src/Tigris/Collision/DynamicAABBTree/: Pure.hs  Type.hs
src/Tigris/Collision/DynamicAABBTree/All/: Type.hs
src/Tigris/Collision/DynamicAABBTree/Moving/: Pure.hs  Type.hs
src/Tigris/ECS/: Clock.hs  Components.hs  Load.hs  Process.hs  Stores.hs  System.hs  World.hs
src/Tigris/ECS/Clock/: Collision.hs  Lifted.hs  WindowResize.hs
src/Tigris/ECS/Load/: DB.hs  TileMap.hs
src/Tigris/ECS/Process/: BorderCollision.hs  Camera.hs  ColliderCell.hs  Collisions.hs  Copy.hs  Destination.hs  Draw.hs  Events.hs  Follows.hs  Frame.hs  HitStatic.hs  Model.hs  MouseAngle.hs  MousePosition.hs  NormVelocity.hs  PVelocity.hs  Position.hs  Present.hs  Projection.hs  Rotation.hs  Shoot.hs  SpriteSheet.hs  StaticCollisionTree.hs  TreeDraw.hs  UV.hs  Velocity.hs  View.hs  VoxelDraw.hs  WantLeftClick.hs
src/Tigris/ECS/Stores/: BTMGlobal.hs  BTMVGlobal.hs  BTQGlobal.hs  TMGlobal.hs  TMVGlobal.hs  TQGlobal.hs
src/Tigris/FRP/: Schedule.hs  Util.hs
src/Tigris/Graphics/: Rectangle.hs  Window.hs
src/Tigris/Inventory/: Types.hs
src/Tigris/OpenGL/: Buffer.hs  Init.hs  Matrix.hs  PNG.hs  Shader.hs
src/Tigris/SDL/: Window.hs
src/Tigris/WFC/: Algorithm.hs
