cabal-version:      2.4
name:               tigris
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE                    
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

library
    exposed-modules:          Tigris

                            , Tigris.Init
                            , Tigris.Load

                            , Tigris.Collision
                            , Tigris.Collision.KDTreeMap

                            , Tigris.Graphics
                            , Tigris.Graphics.Rectangle
                            , Tigris.Graphics.Window

                            , Tigris.FRP
                            , Tigris.FRP.Util
                            , Tigris.FRP.Schedule

                            , Tigris.ECS
                            , Tigris.ECS.World
                            , Tigris.ECS.System
                            , Tigris.ECS.Stores
                            , Tigris.ECS.Stores.TMVGlobal
                            , Tigris.ECS.Stores.BTMVGlobal
                            , Tigris.ECS.Stores.BTQGlobal
                            , Tigris.ECS.Clock
                            , Tigris.ECS.Clock.WindowResize
                            , Tigris.ECS.Clock.Collision
                            , Tigris.ECS.Components
                            , Tigris.ECS.Process
                            , Tigris.ECS.Process.Position
                            , Tigris.ECS.Process.Destination
                            , Tigris.ECS.Process.Camera
                            , Tigris.ECS.Process.Rotation
                            , Tigris.ECS.Process.Events
                            , Tigris.ECS.Process.NormVelocity
                            , Tigris.ECS.Process.SpriteSheet
                            , Tigris.ECS.Process.Copy
                            , Tigris.ECS.Process.Present
                            , Tigris.ECS.Process.BorderCollision
                            , Tigris.ECS.Process.ColliderCell
                      
    build-depends:            base ^>=4.15.1.0
                            , rhine
                            , apecs
                            , vector
                            , sdl2
                            , sdl2-image
                            , sdl2-ttf
                            , time
                            , containers
                            , stm
                            , text
                            , transformers
                            , deepseq
    hs-source-dirs:           src
    default-language:         Haskell2010
    ghc-options:              -W
                              -Wall
                              -Wincomplete-uni-patterns
                              -Wincomplete-record-updates
                              -Wpartial-fields
                              -Werror=missing-home-modules
                              -Widentities
                              -Wredundant-constraints
