cabal-version:      2.4
name:               tigris
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE                    
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org
    sprites/**/*.png
    shaders/**/*.vert
    shaders/**/*.frag

library
    exposed-modules:          Tigris

                            , Tigris.OpenGL
                            , Tigris.OpenGL.PNG
                            , Tigris.OpenGL.Shader
                            , Tigris.OpenGL.Matrix
                            , Tigris.OpenGL.Buffer

                            , Tigris.WFC
                            , Tigris.WFC.Algorithm

                            , Tigris.Init
                            , Tigris.Load

                            , Tigris.Collision
                            , Tigris.Collision.KDTreeMap

                            , Tigris.Graphics
                            , Tigris.Graphics.Rectangle
                            , Tigris.Graphics.Window

                            , Tigris.FRP
                            , Tigris.FRP.Util
                            , Tigris.FRP.Schedule

                            , Tigris.ECS
                            , Tigris.ECS.World
                            , Tigris.ECS.System
                            , Tigris.ECS.Stores
                            , Tigris.ECS.Stores.TMVGlobal
                            , Tigris.ECS.Stores.BTMVGlobal
                            , Tigris.ECS.Stores.BTQGlobal
                            , Tigris.ECS.Clock
                            , Tigris.ECS.Clock.WindowResize
                            , Tigris.ECS.Clock.Collision
                            , Tigris.ECS.Components
                            , Tigris.ECS.Process
                            , Tigris.ECS.Process.Position
                            , Tigris.ECS.Process.Destination
                            , Tigris.ECS.Process.Camera
                            , Tigris.ECS.Process.Rotation
                            , Tigris.ECS.Process.Events
                            , Tigris.ECS.Process.SpriteSheet
                            , Tigris.ECS.Process.Copy
                            , Tigris.ECS.Process.Present
                            , Tigris.ECS.Process.BorderCollision
                            , Tigris.ECS.Process.ColliderCell
                            , Tigris.ECS.Process.Collisions
                      
    build-depends:            base ^>=4.15.1.0
                            , rhine
                            , apecs
                            , vector
                            , sdl2
                            , OpenGL
                            , time
                            , containers
                            , stm
                            , text
                            , transformers
                            , deepseq
                            , random
                            , random-fu
                            , rvar
                            , JuicyPixels
                            , JuicyPixels-extra
                            , bytestring
                            , linear
    hs-source-dirs:           src
    default-language:         Haskell2010
    ghc-options:              -W
                              -Wall
                              -Wincomplete-uni-patterns
                              -Wincomplete-record-updates
                              -Wpartial-fields
                              -Werror=missing-home-modules
                              -Widentities
                              -Wredundant-constraints
executable demo
    main-is:                   Main.hs
    build-depends:             base ^>=4.15.1.0
                             , tigris
                             , OpenGL
                             , sdl2
                             , apecs
                             , rhine
                             , vector
                             , linear
                             , text
    hs-source-dirs:            app
    default-language:         Haskell2010
    ghc-options:              -W
                              -Wall
                              -Wincomplete-uni-patterns
                              -Wincomplete-record-updates
                              -Wpartial-fields
                              -Werror=missing-home-modules
                              -Widentities
                              -Wredundant-constraints