cabal-version:      2.4
name:               tigris
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE                    
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

data-files:
    sprites/**/*.png
    shaders/**/*.vert
    shaders/**/*.frag
    data/**/*.db

library
    exposed-modules:          Tigris

                            , Tigris.OpenGL
                            , Tigris.OpenGL.Init
                            , Tigris.OpenGL.PNG
                            , Tigris.OpenGL.Shader
                            , Tigris.OpenGL.Matrix
                            , Tigris.OpenGL.Buffer

                            , Tigris.WFC
                            , Tigris.WFC.Algorithm

                            , Tigris.Init

                            , Tigris.Collision
                            , Tigris.Collision.AABB
                            , Tigris.Collision.KDTreeMap
                            , Tigris.Collision.DynamicAABBTree
                            , Tigris.Collision.DynamicAABBTreeFixed

                            , Tigris.SDL
                            , Tigris.SDL.Window

                            , Tigris.FRP
                            , Tigris.FRP.Util
                            , Tigris.FRP.Schedule

                            , Tigris.ECS
                            , Tigris.ECS.World
                            , Tigris.ECS.System
                            , Tigris.ECS.Stores
                            , Tigris.ECS.Stores.TMVGlobal
                            , Tigris.ECS.Stores.BTMVGlobal
                            , Tigris.ECS.Stores.BTQGlobal
                            , Tigris.ECS.Stores.TQGlobal
                            , Tigris.ECS.Clock
                            , Tigris.ECS.Clock.WindowResize
                            , Tigris.ECS.Clock.Collision
                            , Tigris.ECS.Components

                            , Tigris.ECS.Process
                            , Tigris.ECS.Process.Draw
                            , Tigris.ECS.Process.Model
                            , Tigris.ECS.Process.View
                            , Tigris.ECS.Process.Projection
                            , Tigris.ECS.Process.Position
                            , Tigris.ECS.Process.PVelocity
                            , Tigris.ECS.Process.UV
                            , Tigris.ECS.Process.Rotation
                            , Tigris.ECS.Process.Events
                            , Tigris.ECS.Process.SpriteSheet
                            , Tigris.ECS.Process.BorderCollision
                            , Tigris.ECS.Process.ColliderCell
                            , Tigris.ECS.Process.Collisions
                            , Tigris.ECS.Process.Follows
                            , Tigris.ECS.Process.MouseAngle
                            , Tigris.ECS.Process.MousePosition
                            , Tigris.ECS.Process.WantLeftClick
                            , Tigris.ECS.Process.Shoot
                            , Tigris.ECS.Process.StaticCollisionTree
                            , Tigris.ECS.Process.HitStatic

                            , Tigris.ECS.Load
                            , Tigris.ECS.Load.DB
                            , Tigris.ECS.Load.TileMap

                            , Tigris.Inventory
                            , Tigris.Inventory.Types

    other-modules:            Paths_tigris
    autogen-modules:          Paths_tigris
                      
    build-depends:            base ^>=4.15.1.0
                            , rhine
                            , dunai
                            , apecs
                            , vector
                            , fixed-vector
                            , primitive
                            , sdl2
                            , OpenGL
                            , time
                            , containers
                            , stm
                            , text
                            , transformers
                            , deepseq
                            , random
                            , random-fu
                            , rvar
                            , JuicyPixels
                            , JuicyPixels-extra
                            , bytestring
                            , linear
                            , sqlite-simple
                            , raw-strings-qq
    hs-source-dirs:           src
    default-language:         Haskell2010
    ghc-options:              -W
                              -Wall
                              -Wincomplete-uni-patterns
                              -Wincomplete-record-updates
                              -Wpartial-fields
                              -Werror=missing-home-modules
                              -Widentities
                              -Wredundant-constraints
executable demo
    main-is:                   Main.hs
    build-depends:             base ^>=4.15.1.0
                             , tigris
                             , OpenGL
                             , sdl2
                             , apecs
                             , rhine
                             , vector
                             , linear
                             , text
                             , containers
                             , random
    hs-source-dirs:            app
    default-language:         Haskell2010
    ghc-options:              -W
                              -Wall
                              -Wincomplete-uni-patterns
                              -Wincomplete-record-updates
                              -Wpartial-fields
                              -Werror=missing-home-modules
                              -Widentities
                              -Wredundant-constraints
executable db
    main-is:                   Main.hs
    build-depends:             base ^>=4.15.1.0
                             , tigris
                             , vector
                             , linear
                             , text
                             , sqlite-simple
                             , options
    hs-source-dirs:            db
    default-language:         Haskell2010
    ghc-options:              -W
                              -Wall
                              -Wincomplete-uni-patterns
                              -Wincomplete-record-updates
                              -Wpartial-fields
                              -Werror=missing-home-modules
                              -Widentities
                              -Wredundant-constraints